<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contextClickable="false"
        android:focusable="false"
        android:orientation="vertical"
        android:padding="@dimen/in_padding"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="@dimen/height1">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/text_name_5"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:srcCompat="@drawable/_fc08dc1_fd63_40cf_bdd3_9b39e6f70ae3" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/text_name_1"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/text_name_2"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/editTextTextPersonName3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="25"
            android:hint="@string/text_name_3"
            android:inputType="textPersonName"
            android:textSize="@dimen/text_size2" />

        <EditText
            android:id="@+id/editTextNumberPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:hint="@string/text_name_4"
            android:textSize="@dimen/text_size2"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_name_first" />

    </LinearLayout>

</FrameLayout>